Sim feat New Header

--- a/tiger-fe/src/index.css
+++ b/tiger-fe/src/index.css
@@ -102,6 +102,7 @@ section {
 }
 body {
   line-height: 1;
+  font-family: "Noto Sans KR", sans-serif;
 }
 ol,
 ul {
@@ -122,3 +123,5 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
