--- a/tiger-fe/src/index.css
+++ b/tiger-fe/src/index.css
@@ -103,6 +103,12 @@ section {
 body {
   line-height: 1;
   font-family: "Noto Sans KR", sans-serif;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 ol,
 ul {
@@ -122,6 +128,13 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+span.no_selection {
+  user-select: none; /* standard syntax */
+  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+  -moz-user-select: none; /* mozilla browsers */
+  -khtml-user-select: none; /* webkit (konqueror) browsers */
+  -ms-user-select: none; /* IE10+ */
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
